2D_&_3D_Isotropic_Elastostatics/jitfailure-dolfin_expression_753e8d592ddce1efca507163fb71de13/error.log
/tmp/tmp2nt1p85v/dolfin_expression_753e8d592ddce1efca507163fb71de13.cpp: In member function ‘virtual void dolfin::dolfin_expression_753e8d592ddce1efca507163fb71de13::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp2nt1p85v/dolfin_expression_753e8d592ddce1efca507163fb71de13.cpp:65:77: error: expected ‘)’ before ‘;’ token
           values[2] = 4*exp(-pow(beta, 2)*(pow(x[0], 2) + pow(x[1] - R0, 2));
                                                                             ^
/tmp/tmp2nt1p85v/dolfin_expression_753e8d592ddce1efca507163fb71de13.cpp: In member function ‘virtual double dolfin::dolfin_expression_753e8d592ddce1efca507163fb71de13::get_property(std::__cxx11::string) const’:
/tmp/tmp2nt1p85v/dolfin_expression_753e8d592ddce1efca507163fb71de13.cpp:77:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "beta") return beta;          if (name == "R0") return R0;
           ^~
/tmp/tmp2nt1p85v/dolfin_expression_753e8d592ddce1efca507163fb71de13.cpp:77:53: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "beta") return beta;          if (name == "R0") return R0;
                                                     ^~
